[package]
name = "dict_walker"
version = "0.1.0"
authors = ["Kowsz <dewka12@gmail.com>"]

[dependencies]
encoding = "0.2.33"
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"
clap = "2.32"
log = "0.4.6"
fern = { version = "0.5", features = ["colored"] }
chrono = "0.4.6"
regex = "1.0.6"
lazy_static = "1.2.0"
